Set body styles with Comic Sans MS font, a background image ('chat_app_bg.png') centered and fixed, covering the entire viewport. Additional styles include an 18px font size, limegreen text color, no margin or padding, flex container with centered content, and a minimum height of 100vh.

--- a/css/chat_app.css
+++ b/css/chat_app.css
@@ -6,6 +6,11 @@ body, h2, p, form, label, input, button {
 
 body {
     font-family: 'Comic Sans MS', cursive;
+	background: url(images/chat_app_bg.png) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     font-size: 18px;
     color: limegreen;
     margin: 0;
